# couture-document-api

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DOCUMENTATION_TECHNIQUE_PROJET.txt  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 202605230001_create_books_table.py  202605230002_add_document_workflow_users_and_book_taxonomy.py  202605280001_add_magazine_fields_to_books.py  202606130001_create_patterns_table.py  202606140001_create_media_assets_table.py  202606140002_link_magazines_and_patterns.py  202606190001_add_second_magazine_pattern_sheet.py  202606190002_add_second_pattern_photo.py  202606230001_add_document_last_modifier.py  202607020001_add_available_sizes_to_documents.py  202607050001_add_available_size_ranges_to_documents.py  202607070001_add_measurement_chart_photos.py
app/: main.py
app/core/: auth.py  config.py  enums.py  exceptions.py  security.py
app/db/: base.py  engine_options.py  enum_types.py  session.py  types.py
app/models/: __init__.py  book.py  media_asset.py  mixins.py  pattern.py  user.py
app/repositories/: book_repository.py  pattern_repository.py  search_terms.py  user_repository.py
app/routes/: auth.py  books.py  media.py  metadata.py  patterns.py  uploads.py  users.py
app/schemas/: __init__.py  book.py  media_url.py  metadata.py  pattern.py  user.py
app/services/: admin_seed.py  auth_service.py  book_service.py  (+4 more)
frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+68 files in other folders)
