[project]
name = "couture-document-api"
version = "0.1.0"
description = "API REST moderne pour un catalogue documentaire specialise couture."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "bcrypt>=4.1.3",
    "fastapi>=0.115.0",
    "greenlet>=3.0.3",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
